# allolib

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  init.sh  run.sh
cmake/: al_files.cmake  find_additional_dependencies.cmake
cmake/find_scripts/: FindFreeImage.cmake  FindFreeimagelocal.cmake  FindFreetypelocal.cmake
cmake/single_file/: CMakeLists.txt
examples/graphics/: img_module.cpp
examples/sound/: stereoscene.cpp
include/al/core/graphics/: al_BufferObject.hpp  al_FBO.hpp  al_GLFW.hpp  al_OpenGL.hpp  al_VAO.hpp
include/al/core/io/: al_CSVReader.hpp  al_Window.hpp
include/al/modules/: al_LoadFont.hpp  al_LoadImage.hpp
include/al/util/: al_FontModule.hpp
include/glad/: glad.h
scripts/: compile_debug.sh  compile_release.sh  glfw3.2.sh
src/: al_GLAD.hpp
src/core/app/: app_all.cpp
src/core/graphics/: al_BufferObject.cpp  al_DefaultShaders.cpp  al_Shader.cpp  al_VAOMesh.cpp  graphics_all.cpp
src/core/io/: al_WindowGLFW.cpp  io_all.cpp
src/core/sound/: sound_all.cpp
src/glad/: al_GLAD.cpp  glad.c
src/modules/: al_LoadFont.cpp  al_LoadImage.cpp
src/util/imgui/: imgui_impl_glfw_gl3.cpp
src/util/ui/: ui_all.cpp
